--- a/index.html
+++ b/index.html
@@ -98,11 +98,12 @@
                 </div>
             </div>
             <p>my sotiol:</p>
-            <a class="a__txt" href="https://www.facebook.com/"><img class="mdia__icon" src="img/facebook.png" alt="facebook" /></a>
-            <a class="a__txt" href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en-GB"><img class="mdia__icon" src="img/instagram.png" alt="instagram" /></a>
-            <a class="a__txt" href="https://www.youtube.com/"><img class="mdia__icon" src="img/youtube.png" alt="youtube" /></a>
+            <a  href="https://www.facebook.com/"><img class="mdia__icon" src="img/facebook.png" alt="facebook" /></a>
+            <a  href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en-GB"><img class="mdia__icon" src="img/instagram.png" alt="instagram" /></a>
+            <a  href="https://www.youtube.com/"><img class="mdia__icon" src="img/youtube.png" alt="youtube" /></a>
             <p>© 2025 My Website. All rights reserved.</p>
         </div>
     </footer>
 </body>
+
 </html>
