--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="hero__page">
                     <div class="hero__img">
-                        <img class="img__hero" src="img/hero.jpeg" alt="hero img" />
+                        <img class="img__hero" src="img/hero.png" alt="hero img" />
                     </div>
                     <div class="hero__text">
                         <h2 class="hero__h">mange time is easy</h2>
@@ -107,3 +107,4 @@
 </body>
 
 </html>
+
