--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-﻿
 <!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
@@ -11,14 +10,14 @@
     <header>
         <div class="container">
             <div class="header__worp">
-
+                
                 <div class="header__logo">
                     <a href="index.html"><img class="img__logo" src="img/FocusUp_icon.png" alt="Logo" /></a>
                 </div>
                 <div class="header__nav">
                     <nav>
                         <ul>
-                            <li><a class="a__txt" href="index.html">Home</a></li>
+                            <li><a class="a__txt"  href="index.html">Home</a></li>
                             <li><a class="a__txt" href="about.html">About</a></li>
                             <li><a class="a__txt" href="contacts.html">Contact</a></li>
                         </ul>
@@ -32,7 +31,7 @@
             <div class="container">
                 <div class="hero__page">
                     <div class="hero__img">
-                        <img class="img__hero" src="img/hero.png" alt="hero img" />
+                        <img class="img__hero" src="img/hero.jpeg" alt="hero img" />
                     </div>
                     <div class="hero__text">
                         <h2 class="hero__h">mange time is easy</h2>
@@ -40,33 +39,37 @@
                         <button class="sing__in">sing in</button>
                         <button class="log__in">log in</button>
                     </div>
-                </div>
+                </div>>
             </div>
         </section>
 
         <section class="expane__1" id="expane__1">
             <div class="container">
-                <div class="explane__worp">
-                    <div class="expane__h">
-                        <h2>Discover the features that make Jira so easy to use</h2>
-                    </div>
-                    <div class="expane__worp">
-                        <div class="expane__txt">
-                            <div class="expane__txth">
-                                <h4>Powerful agile boards</h4>
-                            </div>
-                            <div class="expane__p">
-                                <ul>
-                                    <li class="expane1__li"><strong>Easy and Fast to Use:</strong> The website offers a clean and intuitive design, helping users find what they need quickly.</li>
-                                    <li class="expane1__li"><strong>Professional and Reliable Information:</strong> All content is high-quality, accurate, and created to help users get real value.</li>
-                                    <li class="expane1__li"><strong>Helps You Achieve Your Goals:</strong> The site provides tools and resources that make learning and completing tasks easier and more effective.</li>
-                                </ul>
-                            </div>
+                <div class="expane__h">
+                    <h2>Discover the features that make Jira so easy to use</h2>
+                </div>
+                <div class="expane__worp">
+                    <div class="expane__txt">
+                        <div class="expane__txth">
+                            <h4>Powerful agile boards</h4>
                         </div>
-                        <div class="explen__imgs">
+                        <div class="expane__p">
+                            <p class="expane__p1">Scrum boards: Scrum boards help agile teams break large, complex projects into manageable pieces of work so focused teams ship faster.</p>
+                            <p class="expane__p2">Kanban boards: Agile and DevOps teams can use flexible kanban boards to visualize workflows, limit work-in-progress, and maximize efficiency as a team. Templates make it easy to get started quickly and customize as you go.</p>
+                            <p class="expane__p3">Choose your own adventure: Jira is flexible enough to mold to your team’s own unique way of working, whether it is Scrum, Kanban, or something in between.</p>
+                        </div>
+                    </div>
+                    <div class="explen__imgs">
+                        <div class="explen__img1">
                             <img class="explen__img1" src="img/explen_1.png" alt="explane img" />
+                        </div>
+                        <div class="explen__img2">
                             <img class="explen__img2" src="img/explen_2.png" alt="explane img" />
+                        </div>
+                        <div class="explen__img3">
                             <img class="explen__img3" src="img/explen_3.png" alt="explane img" />
+                        </div>
+                        <div class="explen__img4">
                             <img class="explen__img4" src="img/explen_4.png" alt="explane img" />
                         </div>
                     </div>
@@ -84,6 +87,9 @@
     <footer>
         <div class="container">
             <div class="footer__worp">
+                <div class="header__logo">
+                    <a href="index.html"><img class="img__logo" src="img/FocusUp.png" alt="Logo" /></a>
+                </div>
                 <div class="footer__nav">
                     <nav>
                         <ul>
@@ -94,13 +100,16 @@
                     </nav>
                 </div>
             </div>
-            <p>my sotiol:</p>
-            <a href="https://www.facebook.com/"><img class="mdia__icon" src="img/facebook.png" alt="facebook" /></a>
-            <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en-GB"><img class="mdia__icon" src="img/instagram.png" alt="instagram" /></a>
-            <a href="https://www.youtube.com/"><img class="mdia__icon" src="img/youtube.png" alt="youtube" /></a>
-            <p>© 2025 My Website. All rights reserved.</p>
+            <div>
+                <p>my sotiol:</p>
+                <div>
+                    <a class="a__txt" href="https://www.facebook.com/"><img class="mdia__icon" src="img/facebook.png" alt="facebook" /></a>
+                    <a class="a__txt" href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en-GB"><img class="mdia__icon" src="img/instagram.png" alt="instagram" /></a>
+                    <a class="a__txt" href="https://www.youtube.com/"><img class="mdia__icon" src="img/youtube.png" alt="youtube" /></a>
+                </div>
+                <p>© 2025 My Website. All rights reserved.</p>
+            </div>
         </div>
     </footer>
 </body>
 </html>
-
