--- a/index.html
+++ b/index.html
@@ -77,10 +77,52 @@
             </div>
         </section>
 
-        <section class="section" id="section3">
+        <section class="explen__2" id="explen__2">
             <div class="container">
-                <h2>Section 3</h2>
-                <p>Text for the third section.</p>
+                <div class="explen2__worp">
+                    <div class="emxplen2">
+                        <div>
+                            <img class="explen2__img" src="img/explen_2.1.jpeg" alt="explane img" />"
+                        </div>
+                        <div>
+                            <h2>Travel more.</h2>
+                            <p>Focus on traveling the world while your work gets done faster.</p>
+                            <a href="https://www.bing.com/images/search?q=plane&form=HDRSC3&first=1&cw=2306&ch=1195">content</a>
+                        </div>
+                        <div class="explen2__sub">
+                            <button><img class="mdia__icon" src="img/heart.png" alt="facebook" /></button>
+                            <p>12/12/12</p>
+                        </div>
+                    </div>
+                    <div class="emxplen2">
+                        <div>
+                            <img class="explen2__img" src="img/explen_2.2.webp" alt="explane img" />"
+                        </div>
+                        <div>
+                            <h2>Code smarter.</h2>
+                            <p>Spend more time programming, building projects, and learning new skills.</p>
+                            <a href="https://www.bing.com/images/search?q=plane&form=HDRSC3&first=1&cw=2306&ch=1195">content</a>
+                        </div>
+                        <div class="explen2__sub">
+                            <button><img class="mdia__icon" src="img/heart.png" alt="facebook" /></button>
+                            <p>12/12/12</p>
+                        </div>
+                    </div>
+                    <div class="emxplen2">
+                        <div>
+                            <img class="explen2__img" src="img/explen_2.3.webp" alt="explane img" />"
+                        </div>
+                        <div>
+                            <h2>Have more fun.</h2>
+                            <p>Enjoy life more—have fun, relax, and do what you actually love.</p>
+                            <a href="https://www.bing.com/images/search?q=plane&form=HDRSC3&first=1&cw=2306&ch=1195">content</a>
+                        </div>
+                        <div class="explen2__sub">
+                            <button><img class="mdia__icon" src="img/heart.png" alt="facebook" /></button>
+                            <p>12/12/12</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
