--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="hero__page">
                     <div class="hero__img">
-                        <img class="img__hero" src="img/hero.jpeg" alt="hero img" />
+                        <img class="img__hero" src="img/hero.png" alt="hero img" />
                     </div>
                     <div class="hero__text">
                         <h2 class="hero__h">mange time is easy</h2>
@@ -90,7 +90,7 @@
                             <a href="https://www.bing.com/images/search?q=plane&form=HDRSC3&first=1&cw=2306&ch=1195">content</a>
                         </div>
                         <div class="explen2__sub">
-                            <button><img class="mdia__icon" src="img/heart.png" alt="facebook" /></button>
+                            <button class="like"><img class="mdia__icon" src="img/heart.png" alt="facebook" /></button>
                             <p>12/12/12</p>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                             <a href="https://www.bing.com/images/search?q=plane&form=HDRSC3&first=1&cw=2306&ch=1195">content</a>
                         </div>
                         <div class="explen2__sub">
-                            <button><img class="mdia__icon" src="img/heart.png" alt="facebook" /></button>
+                            <button class="like"><img class="mdia__icon" src="img/heart.png" alt="facebook" /></button>
                             <p>12/12/12</p>
                         </div>
                     </div>
@@ -118,8 +118,96 @@
                             <a href="https://www.bing.com/images/search?q=plane&form=HDRSC3&first=1&cw=2306&ch=1195">content</a>
                         </div>
                         <div class="explen2__sub">
-                            <button><img class="mdia__icon" src="img/heart.png" alt="facebook" /></button>
+                            <button class="like"><img class="mdia__icon" src="img/heart.png" alt="facebook" /></button>
                             <p>12/12/12</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="explen3__worp">
+                    <div class="explen__right">
+                        <div class="explen3">
+                            <div>
+                                <img class="explen3__img" src="img/explen_3.1.png" alt="img explen3" />
+                            </div>
+                            <div class="explen3__txt">
+                                <h2>Task automation</h2>
+                                <p>The software automates repetitive tasks and removes manual work.</p>
+                                <div class="explen2__sub">
+                                    <button class="like"><img class="mdia__icon" src="img/heart.png" alt="facebook" /></button>
+                                    <p>12/12/12</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="explen3">
+                            <div>
+                                <img class="explen3__img" src="img/explen_3.2.png" alt="img explen3" />
+                            </div>
+                            <div class="explen3__txt">
+                                <h2>Time saving</h2>
+                                <p>You complete tasks faster and free up valuable time.</p>
+                                <div class="explen2__sub">
+                                    <button class="like"><img class="mdia__icon" src="img/heart.png" alt="facebook" /></button>
+                                    <p>12/12/12</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="explen3">
+                            <div>
+                                <img class="explen3__img" src="img/explen_3.3.png" alt="img explen3" />
+                            </div>
+                            <div class="explen3__txt">
+                                <h2>Developer tools</h2>
+                                <p>Smart tools help you write cleaner, more efficient code.</p>
+                                <div class="explen2__sub">
+                                    <button class="like"><img class="mdia__icon" src="img/heart.png" alt="facebook" /></button>
+                                    <p>12/12/12</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="explen__left">
+                        <div class="explen3">
+                            <div>
+                                <img class="explen3__img" src="img/explen_3.4.png" alt="img explen3" />
+                            </div>
+                            <div class="explen3__txt">
+                                <h2>Work management</h2>
+                                <p>All your tasks and data are organized in one simple place.</p>
+                                <div class="explen2__sub">
+                                    <button class="like"><img class="mdia__icon" src="img/heart.png" alt="facebook" /></button>
+                                    <p>12/12/12</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="explen3">
+                            <div>
+                                <img class="explen3__img" src="img/explen_3.5.png" alt="img explen3" />
+                            </div>
+                            <div class="explen3__txt">
+                                <h2>Productivity boost</h2>
+                                <p>Get more done with less effort and fewer mistakes.</p>
+                                <div class="explen2__sub">
+                                    <button class="like"><img class="mdia__icon" src="img/heart.png" alt="facebook" /></button>
+                                    <p>12/12/12</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="explen3">
+                            <div>
+                                <img class="explen3__img" src="img/explen_3.6.png" alt="img explen3" />
+                            </div>
+                            <div class="explen3__txt">
+                                <h2>More free time</h2>
+                                <p>Spend your time traveling, learning, and having fun.</p>
+                                <div class="explen2__sub">
+                                    <button class="like"><img class="mdia__icon" src="img/heart.png" alt="facebook" /></button>
+                                    <p>12/12/12</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
